feat(java): DSL projections, aggregates, and the escape hatch
D4+D5: WITH/withDistinct with honestly-documented implicit grouping
(every shape engine-probed first), the three-tier raw escape hatch with
the boundary control red in both directions, the DSL README section
with byte-verified runnable examples, and the program CHANGELOG set.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>